--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="fr">
+<html lang="en">
 
 <head>
 	<meta charset="utf-8">
@@ -7,17 +7,47 @@
 	<link rel="stylesheet" href="style.css">
 	<script src="script.js"></script>
 </head>
-<!-- Header -->
-<header>
-	<a>Hello World !</a>
-</header>
-<!-- Body -->
 <body>
+	<div class="">
+		<div class="navigation">
+			<a href="#">Home</a>
+			<a href="#">About</a>
+			<a href="#">Works</a>
+			<a href="#">Contact</a>
+		</div>
+	</div>
+	<script type="text/javascript">
+		var nav = document.getElementsByClassName("navigation");
+		
+		window.onscroll = function sticky(){
+			if(window.pageYOffset > nav[0].offsetTop){
+				nav[0].classList.add("nav");
+			}else{
+				nav[0].classList.remove("nav");
+			}
+		}
+	</script>
 	
-	<a>Hello World !</a>
+	
+	<!-- Header -->
+	<header>
+		<a>Hello World !</a>
+	</header>
+	
+	<main>
+		<a>Hello World !</a>
+		<a role="baner">Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !
+		</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !
+		</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !
+		</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !
+		</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !
+		</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !
+		</a>
+	</main>
+	
+	<!-- Footer -->
+	<footer>
+		<a>Hello World !</a>
+	</footer>
 </body>
-<!-- Footer -->
-<footer>
-	<a>Hello World !</a>
-</footer>
 </html>
