--- a/index.html
+++ b/index.html
@@ -8,35 +8,33 @@
 	<script src="script.js"></script>
 </head>
 <body>
-	<div class="">
-		<div class="navigation">
-			<a href="#">Home</a>
-			<a href="#">About</a>
-			<a href="#">Works</a>
-			<a href="#">Contact</a>
-		</div>
-	</div>
-	<script type="text/javascript">
-		var nav = document.getElementsByClassName("navigation");
-		
-		window.onscroll = function sticky(){
-			if(window.pageYOffset > nav[0].offsetTop){
-				nav[0].classList.add("nav");
-			}else{
-				nav[0].classList.remove("nav");
-			}
-		}
-	</script>
-	
-	
 	<!-- Header -->
 	<header>
-		<a>Hello World !</a>
+		<div class="">
+			<div class="navigation">
+				<img style="height:auto; border-radius: 50% !important;" alt="Avatar" width="260" height="260" src="https://avatars.githubusercontent.com/u/74106176?v=4">
+				<a href="#">Home</a>
+				<a href="#">About</a>
+				<a href="#">Works</a>
+				<a href="#">Contact</a>
+			</div>
+		</div>
+		<script type="text/javascript"/>
+			var nav = document.getElementsByClassName("navigation");
+			
+			window.onscroll = function sticky(){
+				if(window.pageYOffset > nav[0].offsetTop){
+					nav[0].classList.add("nav");
+				}else{
+					nav[0].classList.remove("nav");
+				}
+			}
+		</script>
 	</header>
 	
 	<main>
 		<a>Hello World !</a>
-		<a role="baner">Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !
+		<a>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !
 		</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !
 		</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !
 		</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !
