--- a/index.html
+++ b/index.html
@@ -4,74 +4,77 @@
 <head>
 	<meta charset="utf-8">
 	<title>Motisma479</title>
+
+	<script src="https://code.jquery.com/jquery-3.7.0.js"></script>
+
 	<link rel="stylesheet" href="style.css">
-	<script src="script.js"></script>
+	<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.1.0/uicons-brands/css/uicons-brands.css'>
+	<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.1.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
 </head>
 <body>
-<canvas id="canvas">Your browser doesn't support canvas</canvas>
-		<!-- SVG Goo filter from: https://css-tricks.com/gooey-effect/ -->
-		<svg xmlns="http://www.w3.org/2000/svg" version="1.1">
-			<defs>
-			  <filter id="shadowed-goo">
-				  
-				  <feGaussianBlur in="SourceGraphic" result="blur" stdDeviation="10" />
-				  <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
-				  <feGaussianBlur in="goo" stdDeviation="3" result="shadow" />
-				  <feColorMatrix in="shadow" mode="matrix" values="0 0 0 0 0  0 0 0 0 0  0 0 0 0 0  0 0 0 1 -0.2" result="shadow" />
-				  <feOffset in="shadow" dx="1" dy="1" result="shadow" />
-				  <feBlend in2="shadow" in="goo" result="goo" />
-				  <feBlend in2="goo" in="SourceGraphic" result="mix" />
-			  </filter>
-			  <filter id="goo">
-				  <feGaussianBlur in="SourceGraphic" result="blur" stdDeviation="10" />
-				  <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
-				  <feBlend in2="goo" in="SourceGraphic" result="mix" />
-			  </filter>
-			</defs>
-		</svg>
-		<script src="background.js"></script>
-
 	<!-- Header -->
 	<header>
-		<div class="">
+		
 			<div class="navigation">
-				<div class="navButtons">
-					<a href="#">Home</a>
-					<a href="#">About</a>
-					<a href="#">Works</a>
-					<a href="#">Contact</a>
-				</div>
 				<h1>Motisma479</h1>
+				<div class="menuIcon">
+					<i class="fi fi-rr-menu-burger"></i>
+				</div>
 			</div>
 			
-		</div>
-		<div class="test"></div>
-		<script type="text/javascript"/>
-			var nav = document.getElementsByClassName("navigation");
-			
-			window.onscroll = function sticky(){
-				if(window.pageYOffset > nav[0].offsetTop){
-					nav[0].classList.add("nav");
-				}else{
-					nav[0].classList.remove("nav");
-				}
-			}
-		</script>
+		
 	</header>
 	
+	<div class="navButtons">
+		<nav>
+			<li><a href="#">Home</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Works</a></li>
+			<li><a href="#">Contact</a></li>
+		</nav>
+	</div>
+
 	<main>	
-		<div class="mainBlock">
+		<!-- <div class="mainBlock"> -->
+			<i class="fi fi-rr-user"></i>
 			<a>Hello World !</a>
 			<a>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !
 			</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !
 			</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !
 			</a>
-		</div>
+		<!-- </div> -->
 	</main>
 	
 	<!-- Footer -->
 	<footer>
-		<a>Hello World !</a>
+		<p class="network"><a href="https://github.com/Motisma479"><i class="fi fi-brands-github"></i>Motisma479</a></p>
+		<p class="network"><a href="https://www.linkedin.com/in/mathieu-robion-128416266/"><i class="fi fi-brands-linkedin"></i>Mathieu Robion</a></p>
+		Uicons by <a href="https://www.flaticon.com/uicons">Flaticon</a>
 	</footer>
+
 </body>
 </html>
+
+<script type="text/javascript"/>
+	var nav = document.getElementsByClassName("navigation");
+	
+	window.onscroll = function sticky(){
+		if(window.pageYOffset > nav[0].offsetTop)
+		{
+			nav[0].classList.add("nav");
+		}
+		else
+		{
+			nav[0].classList.remove("nav");
+		}
+	}
+</script>
+
+<script>
+	$(".menuIcon").click(function(){
+		$(this).toggleClass("active");
+		$(".navButtons").toggleClass("active");
+		$(".navigation").toggleClass("active");
+		$(".menuIcon i").toggleClass("fi-rr-menu-burger fi-rr-cross-small");
+	});
+</script>
