--- a/works.html
+++ b/works.html
@@ -17,13 +17,13 @@
 		
 			<div class="navigation">
 				<h1>Motisma479</h1>
+			</div>
+			<div class="IconOnNav">
 				<div class="menuIcon">
 					<i class="fi fi-rr-menu-burger"></i>
 				</div>
 			</div>
-			<div class="IconOnNav"></div>
-			
-		
+
 	</header>
 	
 	<div class="navButtons">
@@ -43,7 +43,7 @@
 			/>
 
 			<table style="width: 95%; margin: 0px auto; margin-bottom: 5px;">
-				<th style="width: 65%;">
+				<th style="width: 50%;">
 					<h2 class="projectTitle">Template</h2>
 				</th>
 				<th>
@@ -106,7 +106,7 @@
 			/>
 
 			<table style="width: 95%; margin: 0px auto; margin-bottom: 5px;">
-				<th style="width: 65%;">
+				<th style="width: 50%;">
 					<h2 class="projectTitle">Template</h2>
 				</th>
 				<th>
@@ -181,7 +181,7 @@
 
 </body>
 </html>
-
+<!-- 
 <script type="text/javascript"/>
 	var nav = document.getElementsByClassName("navigation");
 	var menuIcon = document.getElementsByClassName("menuIcon");
@@ -201,7 +201,7 @@
 
 		}
 	}
-</script>
+</script> -->
 
 <script>
 	$(".menuIcon").click(function(){
