--- a/contact.html
+++ b/contact.html
@@ -15,15 +15,15 @@
 	<!-- Header -->
 	<header>
 		
-			<div class="navigation">
-				<h1>Motisma479</h1>
-				<div class="menuIcon">
-					<i class="fi fi-rr-menu-burger"></i>
-				</div>
+		<div class="navigation">
+			<h1>Motisma479</h1>
+		</div>
+		<div class="IconOnNav">
+			<div class="menuIcon">
+				<i class="fi fi-rr-menu-burger"></i>
 			</div>
-			<div class="IconOnNav"></div>
-			
-		
+		</div>
+
 	</header>
 	
 	<div class="navButtons">
