[modified]More work added and contact started

--- a/contact.html
+++ b/contact.html
@@ -7,9 +7,10 @@
 
 	<script src="https://code.jquery.com/jquery-3.7.0.js"></script>
 
-	<script src="menuIcon.js"></script>
+	<script src="script/menuIcon.js"></script>
 
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="contact.css">
 	<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.1.0/uicons-brands/css/uicons-brands.css'>
 	<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.1.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
 </head>
@@ -38,13 +39,20 @@
 	</div>
 
 	<main>	
-		<!-- <div class="mainBlock"> -->
-			<a>Contact !</br>
-			<a>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !
-			</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !
-			</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !</br>Hello World !
-			</a>
-		<!-- </div> -->
+
+		<div class="contactBlock">
+			<h1>Mathieu Robion</h1>
+			<div class="contactIcon">
+				<a href="https://www.linkedin.com/in/mathieu-robion-128416266/"><i class="fi fi-brands-linkedin"></i></a>
+				<a href="https://github.com/Motisma479"><i class="fi fi-brands-github"></i></a>
+				<a href="https://discordapp.com/users/481963313433935888"><i class="fi fi-brands-discord"></i></a>
+			</div>
+			<form action="mailto:robion.mathieu.16@gmail.com">
+				<button class="contactButton">Contact me</button>
+			</form>
+		  
+		</div>
+
 	</main>
 	
 	<!-- Footer -->
