--- a/works.html
+++ b/works.html
@@ -7,8 +7,8 @@
 
 	<script src="https://code.jquery.com/jquery-3.7.0.js"></script>
 
-	<script src="menuIcon.js"></script>
-	<script src="projectParser.js"></script>
+	<script src="script/menuIcon.js"></script>
+	<script src="script/projectParser.js"></script>
 
 	<link rel="stylesheet" href="style.css">
 	<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.1.0/uicons-brands/css/uicons-brands.css'>
@@ -44,7 +44,7 @@
 			Project Block used in ProjectParser.js 
 			this one is used for testing.
 		-->
-		<div class="projectBlock" hidden>
+		<!-- <div class="projectBlock" hidden>
 			
 			<div class ="projectPreview">
 				<div class="previousImage imageButton" id="-1" btndir="-1"><i class="fi fi-rr-angle-left"></i></div>
@@ -111,7 +111,7 @@
 				<i class="fi fi-rr-menu-dots"></i>
 			</div>
 
-		</div>
+		</div> -->
 
 	</main>
 	
