--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<script src="https://code.jquery.com/jquery-3.7.0.js"></script>
 
-	<script src="menuIcon.js"></script>
+	<script src="script/menuIcon.js"></script>
 
 	<link rel="stylesheet" href="style.css">
 	<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.1.0/uicons-brands/css/uicons-brands.css'>
