[modified]contact button fixed

--- a/contact.html
+++ b/contact.html
@@ -47,10 +47,11 @@
 				<a href="https://github.com/Motisma479"><i class="fi fi-brands-github"></i></a>
 				<a href="https://discordapp.com/users/481963313433935888"><i class="fi fi-brands-discord"></i></a>
 			</div>
-			<form action="mailto:robion.mathieu.16@gmail.com">
-				<button class="contactButton">Contact me</button>
-			</form>
-		  
+
+			<div class="contactButton">
+				<a href="mailto:robion.mathieu.16@gmail.com">Contact me</a>
+			</div>
+			
 		</div>
 
 	</main>
