[modified]discord link fixed

--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
 			<div class="contactIcon">
 				<a href="https://www.linkedin.com/in/mathieu-robion-128416266/"><i class="fi fi-brands-linkedin"></i></a>
 				<a href="https://github.com/Motisma479"><i class="fi fi-brands-github"></i></a>
-				<a href="https://discordapp.com/users/481963313433935888"><i class="fi fi-brands-discord"></i></a>
+				<a href="discord://-/users/481963313433935888"><i class="fi fi-brands-discord"></i></a>
 			</div>
 
 			<div class="contactButton">
