[modifed] Contact page updated

--- a/contact.html
+++ b/contact.html
@@ -38,9 +38,9 @@
 		</nav>
 	</div>
 
-	<main>	
-
+	<main>
 		<div class="contactBlock">
+			<img class="contactImage" src="https://avatars.githubusercontent.com/u/74106176?v=4"/>
 			<h1>Mathieu Robion</h1>
 			<div class="contactIcon">
 				<a href="https://www.linkedin.com/in/mathieu-robion-128416266/"><i class="fi fi-brands-linkedin"></i></a>
