--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,11 @@
 	<link rel="stylesheet" href="contact.css">
 	<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.1.0/uicons-brands/css/uicons-brands.css'>
 	<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.1.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+
+	<link rel="icon" href="Assets/icon_128_128.png" sizes="128x128">
+	<link rel="icon" href="Assets/icon_64_64.png" sizes="64x64">
+	<link rel="icon" href="Assets/icon_32_32.png" sizes="32x32">
+	<link rel="icon" href="Assets/icon_16_16.png" sizes="16x16">
 </head>
 <body>
 	<!-- Header -->
