[modified] about updated

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 	<header>
 		
 		<div class="navigation">
-			<h1>Motisma479</h1>
+			<img class="NavIcon" src="https://avatars.githubusercontent.com/u/74106176?v=4"/>
+			<div class="NavText">
+				<h1>Mathieu Robion</h1>
+				<h2>Motisma479</h2>
+			</div>
 		</div>
 		<div class="IconOnNav">
 			<div class="menuIcon">
