--- a/works.html
+++ b/works.html
@@ -23,14 +23,18 @@
 	<!-- Header -->
 	<header>
 		
-			<div class="navigation">
-				<h1>Motisma479</h1>
+		<div class="navigation">
+			<img class="NavIcon" src="https://avatars.githubusercontent.com/u/74106176?v=4"/>
+			<div class="NavText">
+				<h1>Mathieu Robion</h1>
+				<h2>Motisma479</h2>
 			</div>
-			<div class="IconOnNav">
-				<div class="menuIcon">
-					<i class="fi fi-rr-menu-burger"></i>
-				</div>
+		</div>
+		<div class="IconOnNav">
+			<div class="menuIcon">
+				<i class="fi fi-rr-menu-burger"></i>
 			</div>
+		</div>
 
 	</header>
 	
